[package]
name = "tencent_online_get"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
date_time = "2.2.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = "1.0.207"
serde_json = "1.0.124"
time = "0.3.36"
urlencoding = "2.1.3"
